--- a/mysite/templates/pybo/question_detail.html
+++ b/mysite/templates/pybo/question_detail.html
@@ -13,7 +13,7 @@
     {% endif %}
     <!-- 태그 기능 -->
     {% if question.tag  %}
-    <h2 class="border-bottom py-2">{{ question.tag }}  {{ question.subject }}</h2>
+    <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     {% else %}
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     {% endif %}
