--- a/mysite/templates/navbar.html
+++ b/mysite/templates/navbar.html
@@ -1,6 +1,6 @@
 <!-- 네비게이션바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <a class="navbar-brand" href="{% url 'pybo:index' %}">게시판</a>
+    <a class="navbar-brand" href="{% url 'pybo:index' %}">メインページ</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,10 +9,10 @@
         <ul class="navbar-nav">
             <li class="nav-item ">
                 {% if user.is_authenticated %}
-                <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (ログアウト)</a>
                 {% else %}
-                <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
-                <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
+                <a class="nav-link" href="{% url 'common:login' %}">ログイン</a>
+                <a class="nav-link" href="{% url 'common:signup' %}">会員登録</a>
                 {% endif %}
             </li>
         </ul>
