modify interview channel

--- a/mysite/templates/pybo/test.html
+++ b/mysite/templates/pybo/test.html
@@ -164,7 +164,7 @@
         </div>
 
         <div class="col-6">
-            <a href="{% url 'pybo:advice' %}">海外生活の助言チャンネル</a>
+            <a href="{% url 'pybo:advice' %}">インタビューチャンネル</a>
             <table class="table table-hover table-striped">
 
                 <thead>
